# hase

./: .gitignore  LICENSE  README.md  hase.cabal
example/: Usage.hs
foreign/: senna-chk.h  senna-ner.h  senna-pos.h  senna-srl.h  senna.c  senna.h
src/NLP/: Senna.hs
src/NLP/Senna/: Foreign.hs  Functions.hs  Processor.hs  Tags.hs  Types.hs  Util.hs
src/NLP/Senna/Foreign/: Functions.hs  Tags.chs  Types.hs
